# 2048

./: CMakeLists.txt  Makefile  NOTICE  README.md
src/: CMakeLists.txt  board.cc  board.hpp  config.hpp  index.html  main.cc  mcts.cc  mcts.hpp  node.hpp  random_access_arr.hpp  random_access_array.hpp  styles.css
src/css/: styles.css
src/cxx/: board.hpp  main.cc  mcts.cc  node.hpp
src/js/: board.js  main.js
